// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseCard Snapshot Tests > maintains snapshot consistency 1`] = `
<div
  class="text-card-foreground gap-6 rounded-xl group cursor-pointer overflow-hidden border border-gray-200/50 bg-white transition-all duration-300 hover:border-white/20 hover:bg-gradient-to-b hover:from-white/90 hover:to-white/70 hover:shadow-[0_8px_32px_0_rgba(31,38,135,0.15)] hover:backdrop-blur-xl hover:scale-105 flex flex-col h-full"
  data-slot="card"
>
  <div
    class="absolute top-0 left-0 right-0 h-px bg-gradient-to-r from-transparent via-white/40 to-transparent opacity-0 transition-opacity group-hover:opacity-100"
  />
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0 flex-shrink-0"
    data-slot="card-header"
  >
    <div
      class="relative aspect-video overflow-hidden"
    >
      <img
        alt="RCP Adultos AHA 2020"
        class="h-full w-full object-cover"
        src="https://images.unsplash.com/photo-1759872138841-c342bd6410ae?w=400"
      />
      <div
        class="absolute right-3 top-3"
      >
        <span
          class="inline-flex items-center justify-center rounded-md px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 border border-white/30 bg-[#1e467c]/90 text-white backdrop-blur-md shadow-[0_4px_16px_0_rgba(30,70,124,0.3)]"
          data-slot="badge"
        >
          <svg
            class="lucide lucide-award mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          Certificado
        </span>
      </div>
    </div>
  </div>
  <div
    class="[&:last-child]:pb-6 p-4 flex-1 flex flex-col"
    data-slot="card-content"
  >
    <h3
      class="mb-3 line-clamp-2 text-[#0F172A] min-h-[3.5rem]"
    >
      RCP Adultos AHA 2020
    </h3>
    <div
      class="flex flex-wrap items-center gap-3 mt-auto"
    >
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-clock h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span
          class="text-sm"
        >
          8 horas
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-chart-column h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v16a2 2 0 0 0 2 2h16"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
        <span
          class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground bg-[#22C55E] text-white"
          data-slot="badge"
        >
          Básico
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests > maintains snapshot consistency 2`] = `
<div
  class="text-card-foreground gap-6 rounded-xl group cursor-pointer overflow-hidden border border-gray-200/50 bg-white transition-all duration-300 hover:border-white/20 hover:bg-gradient-to-b hover:from-white/90 hover:to-white/70 hover:shadow-[0_8px_32px_0_rgba(31,38,135,0.15)] hover:backdrop-blur-xl hover:scale-105 flex flex-col h-full"
  data-slot="card"
>
  <div
    class="absolute top-0 left-0 right-0 h-px bg-gradient-to-r from-transparent via-white/40 to-transparent opacity-0 transition-opacity group-hover:opacity-100"
  />
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0 flex-shrink-0"
    data-slot="card-header"
  >
    <div
      class="relative aspect-video overflow-hidden"
    >
      <img
        alt="RCP Adultos AHA 2020"
        class="h-full w-full object-cover"
        src="https://images.unsplash.com/photo-1759872138841-c342bd6410ae?w=400"
      />
      <div
        class="absolute right-3 top-3"
      >
        <span
          class="inline-flex items-center justify-center rounded-md px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 border border-white/30 bg-[#1e467c]/90 text-white backdrop-blur-md shadow-[0_4px_16px_0_rgba(30,70,124,0.3)]"
          data-slot="badge"
        >
          <svg
            class="lucide lucide-award mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          Certificado
        </span>
      </div>
    </div>
  </div>
  <div
    class="[&:last-child]:pb-6 p-4 flex-1 flex flex-col"
    data-slot="card-content"
  >
    <h3
      class="mb-3 line-clamp-2 text-[#0F172A] min-h-[3.5rem]"
    >
      RCP Adultos AHA 2020
    </h3>
    <div
      class="flex flex-wrap items-center gap-3 mt-auto"
    >
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-clock h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span
          class="text-sm"
        >
          8 horas
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-chart-column h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v16a2 2 0 0 0 2 2h16"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
        <span
          class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground bg-[#22C55E] text-white"
          data-slot="badge"
        >
          Básico
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests > matches snapshot with all properties 1`] = `
<div
  class="text-card-foreground gap-6 rounded-xl group cursor-pointer overflow-hidden border border-gray-200/50 bg-white transition-all duration-300 hover:border-white/20 hover:bg-gradient-to-b hover:from-white/90 hover:to-white/70 hover:shadow-[0_8px_32px_0_rgba(31,38,135,0.15)] hover:backdrop-blur-xl hover:scale-105 flex flex-col h-full"
  data-slot="card"
>
  <div
    class="absolute top-0 left-0 right-0 h-px bg-gradient-to-r from-transparent via-white/40 to-transparent opacity-0 transition-opacity group-hover:opacity-100"
  />
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0 flex-shrink-0"
    data-slot="card-header"
  >
    <div
      class="relative aspect-video overflow-hidden"
    >
      <img
        alt="RCP Adultos AHA 2020"
        class="h-full w-full object-cover"
        src="https://images.unsplash.com/photo-1759872138841-c342bd6410ae?w=400"
      />
      <div
        class="absolute right-3 top-3"
      >
        <span
          class="inline-flex items-center justify-center rounded-md px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-primary/90 border border-white/30 bg-[#1e467c]/90 text-white backdrop-blur-md shadow-[0_4px_16px_0_rgba(30,70,124,0.3)]"
          data-slot="badge"
        >
          <svg
            class="lucide lucide-award mr-1 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15.477 12.89 1.515 8.526a.5.5 0 0 1-.81.47l-3.58-2.687a1 1 0 0 0-1.197 0l-3.586 2.686a.5.5 0 0 1-.81-.469l1.514-8.526"
            />
            <circle
              cx="12"
              cy="8"
              r="6"
            />
          </svg>
          Certificado
        </span>
      </div>
    </div>
  </div>
  <div
    class="[&:last-child]:pb-6 p-4 flex-1 flex flex-col"
    data-slot="card-content"
  >
    <h3
      class="mb-3 line-clamp-2 text-[#0F172A] min-h-[3.5rem]"
    >
      RCP Adultos AHA 2020
    </h3>
    <div
      class="flex flex-wrap items-center gap-3 mt-auto"
    >
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-clock h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span
          class="text-sm"
        >
          8 horas
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-chart-column h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v16a2 2 0 0 0 2 2h16"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
        <span
          class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground bg-[#22C55E] text-white"
          data-slot="badge"
        >
          Básico
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseCard Snapshot Tests > matches snapshot with minimal properties 1`] = `
<div
  class="text-card-foreground gap-6 rounded-xl group cursor-pointer overflow-hidden border border-gray-200/50 bg-white transition-all duration-300 hover:border-white/20 hover:bg-gradient-to-b hover:from-white/90 hover:to-white/70 hover:shadow-[0_8px_32px_0_rgba(31,38,135,0.15)] hover:backdrop-blur-xl hover:scale-105 flex flex-col h-full"
  data-slot="card"
>
  <div
    class="absolute top-0 left-0 right-0 h-px bg-gradient-to-r from-transparent via-white/40 to-transparent opacity-0 transition-opacity group-hover:opacity-100"
  />
  <div
    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-1.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0 flex-shrink-0"
    data-slot="card-header"
  >
    <div
      class="relative aspect-video overflow-hidden"
    >
      <img
        alt="Mi Curso"
        class="h-full w-full object-cover"
        src="https://images.unsplash.com/photo-1759872138841-c342bd6410ae?w=400"
      />
    </div>
  </div>
  <div
    class="[&:last-child]:pb-6 p-4 flex-1 flex flex-col"
    data-slot="card-content"
  >
    <h3
      class="mb-3 line-clamp-2 text-[#0F172A] min-h-[3.5rem]"
    >
      Mi Curso
    </h3>
    <div
      class="flex flex-wrap items-center gap-3 mt-auto"
    >
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-clock h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <polyline
            points="12 6 12 12 16 14"
          />
        </svg>
        <span
          class="text-sm"
        >
          4 horas
        </span>
      </div>
      <div
        class="flex items-center gap-1 text-[#64748B]"
      >
        <svg
          class="lucide lucide-chart-column h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 3v16a2 2 0 0 0 2 2h16"
          />
          <path
            d="M18 17V9"
          />
          <path
            d="M13 17V5"
          />
          <path
            d="M8 17v-3"
          />
        </svg>
        <span
          class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 text-xs font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden [a&]:hover:bg-accent [a&]:hover:text-accent-foreground bg-[#F59E0B] text-white"
          data-slot="badge"
        >
          Intermedio
        </span>
      </div>
    </div>
  </div>
</div>
`;
